force-app/main/default/objects/ffct__ComponentCountInfo__c/fields/ffct__AdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>ffct__AdditionalDetails__c</fullName>
    <label>Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>