force-app/main/default/objects/ffct__ComponentCountInfo__c/fields/ffct__Category__c.field-meta.xml
<CustomField>
    <fullName>ffct__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CustomObject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>