force-app/main/default/objects/ffct__ComponentCountInfo__c/fields/ffct__Parent__c.field-meta.xml
<CustomField>
    <fullName>ffct__Parent__c</fullName>
    <label>Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>